Improve Julie's integration into GUI